! Fix other prompt z-index

--- a/src/renderer/components/ft-prompt/ft-prompt.css
+++ b/src/renderer/components/ft-prompt/ft-prompt.css
@@ -5,7 +5,8 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 10;
+  /* Higher than components like playlist info */
+  z-index: 200;
   padding: 15px;
   box-sizing: border-box;
   display: flex;
